# xssguard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  xssguard.yaml
benchmarks/: aggregate_report.py  compare_baseline.py  docker-compose.bench.yml  run_matrix_benchmark.py  run_smoke_test.py  score_matrix.py  score_whitebox.py
benchmarks/baselines/: blackbox.json  dvwa_matrix.json  juiceshop_matrix.json  matrix.json  whitebox.json
benchmarks/ground_truth/: dvwa_expected.json  dvwa_matrix_ground_truth.json  juiceshop_expected.json  juiceshop_matrix_ground_truth.json  matrix_ground_truth.json  whitebox_ground_truth.json
benchmarks/real_world/: get_dvwa_cookie.py  run_dvwa_matrix.py  run_juiceshop_matrix.py  run_owasp_benchmark.py
benchmarks/smoke_targets/: angular_xss.ts  dom_xss.js  matrix_server.py  react_xss.jsx  safe_code.js  vulnerable_server.py
blackbox_scanner/: __init__.py  crawler.py  payloads.py  scanner.py
blackbox_scanner/verifier/: __init__.py  headless.py
docs/: dissertation.md  dissertation_full.md
tests/: __init__.py  test_blackbox.py  test_scope_control.py  test_whitebox.py
whitebox_scanner/: __init__.py  scanner.py
xssguard/: __init__.py  cli.py  config.py  logging.py  reporting.py  sanitizer.py
xssguard/core/: __init__.py  models.py
